WP-8540 fixing overlay alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -8576,13 +8576,14 @@ input.signup-submit:hover {
   background-color: #231f20;
   display: inline-block;
   height: 100vh;
-  left: 53%;
+  left: 50%;
+  right: 50%;
   margin-left: -50vw;
   margin-right: -50vw;
   opacity: 0.5;
   position: relative;
   right: 47%;
-  width: 100vw;
+  width: 101vw;
 }
 #md-megamenu-1 .awemenu-active .awemenu-item-title {
   color: #231f20;
