--- a/sass/partials/design/_md-megamenu-main.sass
+++ b/sass/partials/design/_md-megamenu-main.sass
@@ -187,13 +187,13 @@
         background-color: $text-black
         display: inline-block
         height: 100vh
-        left: 53%
+        left: 50%
         margin-left: -50vw
         margin-right: -50vw
         opacity: .50
         position: relative
-        right: 47%
-        width: 100vw
+        right: 50%
+        width: 101vw
     .awemenu-item-title
       color: $text-black
   a.link-title
